fix(sidebar): align sidebar first element of the list to h1 from main content

--- a/assets/sass/_displays-override.scss
+++ b/assets/sass/_displays-override.scss
@@ -26,6 +26,11 @@
 
 }
 
+//WIDGET LIST DISPPLAY
+.widget ul li:first-of-type {
+    padding-top: 0;
+}
+
 //SIDEBAR ON ELEMENTS
 .sidebar-right {
   .main-content {
